change class name to lower case